Update orange color

--- a/src/main.scss
+++ b/src/main.scss
@@ -37,7 +37,7 @@ main {
 }
 
 h1 {
-  color: #af4623;
+  color: #ad4022;
   font-size: 32px;
   font-weight: 700;
   @media (min-width: 1024px) {
@@ -48,7 +48,7 @@ h1 {
 a {
   color: #cccccc;
   &:hover {
-    color: #af4623;
+    color: #ad4022;
   }
 }
 
