--- a/src/routes/Contact.scss
+++ b/src/routes/Contact.scss
@@ -7,7 +7,7 @@
   &__picture {
     background-color: #343434;
     border-radius: 8px;
-    box-shadow: -20px 20px #af4623;
+    box-shadow: -20px 20px #ad4022;
     margin: 24px 0 24px 24px;
     max-width: 80%;
     @media (min-width: 1024px) {
