--- a/src/routes/Projects.scss
+++ b/src/routes/Projects.scss
@@ -1,3 +1,65 @@
 .projects {
-  flex-direction: column;
+  align-items: center;
+  display: flex;
+  gap: 48px;
+  margin: 0 48px;
+  width: 100%;
+
+  &__list {
+    margin-left: 32px;
+    max-width: 300px;
+    min-width: 300px;
+    position: relative;
+    text-align: start;
+
+    &::before {
+      background-color: #ad4022;
+      border-radius: 8px;
+      content: "";
+      height: 100%;
+      left: -24px;
+      position: absolute;
+      top: 10px;
+      width: 4px;
+    }
+  }
+
+  &__content {
+    flex-grow: 1;
+  }
+}
+
+.project {
+  position: relative;
+
+  &::before {
+    background-color: #999999;
+    border-radius: 8px;
+    border: 4px solid #242424;
+    content: "";
+    height: 8px;
+    left: -30px;
+    position: absolute;
+    top: 32px;
+    width: 8px;
+  }
+
+  &__title {
+    color: #999999;
+    cursor: pointer;
+    font-size: 40px;
+
+    &:hover {
+      color: #ad4022;
+    }
+
+    &--current {
+      color: #ad4022;
+      font-size: 48px;
+    }
+  }
+
+  &__description {
+    color: #999999;
+  }
 }
