Change name projects to developments

--- a/src/routes/Developments.scss
+++ b/src/routes/Developments.scss
@@ -1,4 +1,4 @@
-.projects {
+.developments {
   align-items: center;
   display: flex;
   gap: 48px;
@@ -29,7 +29,7 @@
   }
 }
 
-.project {
+.development {
   position: relative;
 
   &::before {
