--- a/src/components/Candles.scss
+++ b/src/components/Candles.scss
@@ -1,3 +1,6 @@
+// This CSS doesn't follow the project rules because it's an old experiment code
+// This doesn't showcase precisely my current knowledge
+
 .candles {
   align-items: center;
   animation: bg 10s linear infinite;
