--- a/src/routes/Developments.scss
+++ b/src/routes/Developments.scss
@@ -1,3 +1,5 @@
+@import "../assets/styles/variables";
+
 .developments {
   align-items: center;
   display: flex;
@@ -13,7 +15,7 @@
     text-align: start;
 
     &::before {
-      background-color: #ad4022;
+      background-color: $PRIMARY_COLOR;
       border-radius: 8px;
       content: "";
       height: 100%;
@@ -33,9 +35,9 @@
   position: relative;
 
   &::before {
-    background-color: #999999;
+    background-color: $SECONDARY_TEXT_COLOR;
     border-radius: 8px;
-    border: 4px solid #242424;
+    border: 4px solid $PRIMARY_BACKGROUND_COLOR;
     content: "";
     height: 8px;
     left: -30px;
@@ -45,21 +47,21 @@
   }
 
   &__title {
-    color: #999999;
+    color: $SECONDARY_TEXT_COLOR;
     cursor: pointer;
     font-size: 40px;
 
     &:hover {
-      color: #ad4022;
+      color: $PRIMARY_COLOR;
     }
 
     &--current {
-      color: #ad4022;
+      color: $PRIMARY_COLOR;
       font-size: 48px;
     }
   }
 
   &__description {
-    color: #999999;
+    color: $SECONDARY_TEXT_COLOR;
   }
 }
