--- a/src/components/AchievementCard.scss
+++ b/src/components/AchievementCard.scss
@@ -5,10 +5,13 @@
   border-radius: 8px;
   cursor: pointer;
   display: flex;
-  height: 300px;
+  height: fit-content;
   justify-content: center;
   overflow: hidden;
   width: 100%;
+  @media (min-width: 1024px) {
+    height: 300px;
+  }
 
   &__image {
     height: 100%;
