--- a/src/components/Achievements.scss
+++ b/src/components/Achievements.scss
@@ -3,5 +3,9 @@
   flex-direction: column;
   gap: 24px;
   margin: 0 auto;
-  width: 80%;
+  width: 90%;
+
+  @media (min-width: 1024px) {
+    width: 80%;
+  }
 }
