Keep improving accessibility and responsiveness

--- a/src/routes/Home.scss
+++ b/src/routes/Home.scss
@@ -33,6 +33,7 @@
       background-color: $PRIMARY_COLOR;
       border: 1px solid $PRIMARY_COLOR;
       font-size: 20px;
+      padding: 4px 16px;
       &:first-child {
         background-color: $SECONDARY_BACKGROUND_COLOR;
       }
