--- a/src/assets/styles/index.scss
+++ b/src/assets/styles/index.scss
@@ -67,7 +67,9 @@ button {
   border: none;
   color: $PRIMARY_TEXT_COLOR;
   cursor: pointer;
-  padding: 8px 16px;
+  font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
+  line-height: 1.5;
+  padding: 0;
   width: fit-content;
 }
 
