--- a/src/components/AchievementCard.scss
+++ b/src/components/AchievementCard.scss
@@ -24,6 +24,7 @@
     background-color: $SECONDARY_BACKGROUND_COLOR;
     display: flex;
     flex-direction: column;
+    font-size: 16px;
     height: 100%;
     justify-content: center;
     padding: 8px 24px;
