--- a/src/routes/Developments.scss
+++ b/src/routes/Developments.scss
@@ -1,15 +1,15 @@
 @import "../assets/styles/variables";
 
 .developments {
-  align-items: center;
   display: flex;
   flex-direction: column;
   flex: 1;
   gap: 48px;
-  margin: 24px;
+  padding: 24px;
   width: 100%;
 
   @media (min-width: 1024px) {
+    align-items: center;
     flex-direction: row;
     margin: 0 48px;
   }
@@ -19,9 +19,11 @@
     flex-direction: column;
     margin-left: 32px;
     max-width: 300px;
-    min-width: 300px;
     position: relative;
     text-align: start;
+    @media (min-width: 1024px) {
+      min-width: 300px;
+    }
 
     &::before {
       background-color: $PRIMARY_COLOR;
@@ -44,8 +46,11 @@
 }
 
 .development {
+  background-color: transparent;
+  border-radius: 0;
   order: 1;
   position: relative;
+  text-align: start;
 
   &::before {
     background-color: $SECONDARY_TEXT_COLOR;
