Make navbar more responsive

--- a/src/routes/Home.scss
+++ b/src/routes/Home.scss
@@ -31,6 +31,7 @@
 
     button {
       background-color: $PRIMARY_COLOR;
+      border-radius: 50px;
       border: 1px solid $PRIMARY_COLOR;
       font-size: 20px;
       padding: 4px 16px;
