--- a/src/components/Nav.scss
+++ b/src/components/Nav.scss
@@ -1,9 +1,51 @@
 @import "../assets/styles/variables";
 
+%menu {
+  background-color: $PRIMARY_COLOR;
+  border-radius: 50px;
+  height: 2px;
+  width: 20px;
+}
+
 .nav {
+  align-items: center;
   background-color: $SECONDARY_BACKGROUND_COLOR;
+  box-shadow: 0 2px 10px black;
+  display: flex;
+  justify-content: space-between;
   padding: 16px;
   width: 100%;
+  z-index: 1;
+  @media (min-width: 1024px) {
+    justify-content: flex-start;
+  }
+
+  &__logo {
+    display: flex;
+    margin-right: 16px;
+  }
+
+  &__menu {
+    @extend %menu;
+    color: transparent;
+    position: relative;
+    @media (min-width: 1024px) {
+      display: none;
+    }
+    &::before {
+      @extend %menu;
+      content: "";
+      position: absolute;
+      top: 8px;
+    }
+    &::after {
+      @extend %menu;
+      bottom: 8px;
+      content: "";
+      left: 0;
+      position: absolute;
+    }
+  }
 
   &__current:after {
     background-color: $PRIMARY_COLOR;
@@ -18,11 +60,25 @@
 
   ul {
     align-items: center;
+    background-color: $SECONDARY_BACKGROUND_COLOR;
+    box-shadow: 0 4px 4px black;
     display: flex;
+    flex-direction: column;
     gap: 24px;
+    left: 0;
+    padding-bottom: 16px;
+    position: absolute;
+    top: 56px;
+    width: 100%;
+
+    @media (min-width: 1024px) {
+      box-shadow: none;
+      flex-direction: row;
+      padding-bottom: 0;
+      position: static;
+    }
     li {
       position: relative;
-
       a {
         text-decoration: none;
       }
