Use styles module and update architecture

--- a/src/components/Nav/styles.module.scss
+++ b/src/components/Nav/styles.module.scss
@@ -1,4 +1,4 @@
-@import "../assets/styles/variables";
+@import "../../assets/styles/variables";
 
 %menu-open {
   background-color: $PRIMARY_COLOR;
