--- a/src/components/Achievements/styles.module.scss
+++ b/src/components/Achievements/styles.module.scss
@@ -1,4 +1,6 @@
-.achievements {
+@import "../../assets/styles/variables";
+
+.achv {
   display: flex;
   flex-direction: column;
   gap: 24px;
@@ -6,5 +8,45 @@
 
   @media (min-width: 1024px) {
     width: 80%;
+  }
+
+  &__card {
+    align-items: center;
+    border-radius: 8px;
+    cursor: pointer;
+    display: flex;
+    height: fit-content;
+    justify-content: center;
+    overflow: hidden;
+    width: 100%;
+    @media (min-width: 1024px) {
+      height: 300px;
+    }
+
+    &__image {
+      height: 100%;
+      object-fit: cover;
+      width: 100%;
+    }
+
+    &__details {
+      align-items: center;
+      background-color: $SECONDARY_BACKGROUND_COLOR;
+      display: flex;
+      flex-direction: column;
+      font-size: 16px;
+      height: 100%;
+      justify-content: center;
+      padding: 8px 24px;
+      text-align: start;
+      width: 100%;
+
+      h3 {
+        color: $PRIMARY_COLOR;
+        font-size: 24px;
+        margin-bottom: 16px;
+        text-align: start;
+      }
+    }
   }
 }
