Improve language selector component

--- a/src/pages/Home/styles.module.scss
+++ b/src/pages/Home/styles.module.scss
@@ -15,7 +15,7 @@
     border: 2px solid $PRIMARY_COLOR;
     max-width: 90%;
     @media (min-width: 1024px) {
-      max-width: 50%;
+      max-width: 500px;
     }
   }
 
