--- a/src/components/Nav/styles.module.scss
+++ b/src/components/Nav/styles.module.scss
@@ -23,6 +23,7 @@
   background-color: $SECONDARY_BACKGROUND_COLOR;
   box-shadow: 0 2px 10px black;
   display: flex;
+  gap: 16px;
   justify-content: space-between;
   padding: 16px;
   width: 100%;
