--- a/src/pages/Contact/styles.module.scss
+++ b/src/pages/Contact/styles.module.scss
@@ -23,6 +23,10 @@
   }
 
   &__content {
+    @media (min-width: 1024px) {
+      min-width: 400px;
+    }
+
     li {
       font-size: 20px;
       text-align: start;
