--- a/src/pages/Contact/styles.module.scss
+++ b/src/pages/Contact/styles.module.scss
@@ -22,6 +22,10 @@
     }
   }
 
+  &__title {
+    text-align: start;
+  }
+
   &__content {
     @media (min-width: 1024px) {
       min-width: 400px;
