--- a/src/components/Nav/styles.module.scss
+++ b/src/components/Nav/styles.module.scss
@@ -21,7 +21,7 @@
 .nav {
   align-items: center;
   background-color: $SECONDARY_BACKGROUND_COLOR;
-  box-shadow: 0 2px 10px black;
+  box-shadow: var(--box-shadow);
   display: flex;
   gap: 16px;
   justify-content: space-between;
@@ -38,6 +38,7 @@
   }
 
   &__menu {
+    background-color: $SECONDARY_BACKGROUND_COLOR;
     height: 20px;
     width: 20px;
     @media (min-width: 1024px) {
@@ -114,6 +115,7 @@
       }
 
       a {
+        color: $PRIMARY_TEXT_COLOR;
         text-decoration: none;
       }
     }
