--- a/src/assets/styles/_variables.scss
+++ b/src/assets/styles/_variables.scss
@@ -1,7 +1,5 @@
 $PRIMARY_COLOR: #ad4022;
-
-$PRIMARY_BACKGROUND_COLOR: #242424;
-$SECONDARY_BACKGROUND_COLOR: #343434;
-
-$PRIMARY_TEXT_COLOR: #cccccc;
-$SECONDARY_TEXT_COLOR: #999999;
+$DARKER_GRAY_COLOR: #242424;
+$DARK_GRAY_COLOR: #343434;
+$LIGHT_GRAY_COLOR: #999999;
+$LIGHTER_GRAY_COLOR: #cccccc;
