--- a/src/assets/styles/index.scss
+++ b/src/assets/styles/index.scss
@@ -18,11 +18,11 @@
 }
 
 body {
-  --primary-background-color: #{$PRIMARY_BACKGROUND_COLOR};
-  --secondary-background-color: #{$SECONDARY_BACKGROUND_COLOR};
-  --image-background-color: #{$SECONDARY_BACKGROUND_COLOR};
-  --primary-text-color: #{$PRIMARY_TEXT_COLOR};
-  --secondary-text-color: #{$SECONDARY_TEXT_COLOR};
+  --primary-background-color: #{$DARKER_GRAY_COLOR};
+  --secondary-background-color: #{$DARK_GRAY_COLOR};
+  --image-background-color: #{$DARK_GRAY_COLOR};
+  --primary-text-color: #{$LIGHTER_GRAY_COLOR};
+  --secondary-text-color: #{$LIGHT_GRAY_COLOR};
   --box-shadow: 0 2px 10px black;
 
   background-color: var(--primary-background-color);
@@ -30,13 +30,12 @@ body {
   margin: 0;
 
   &.light {
-    // still going to figure colors out
     --primary-background-color: #d6d6d6;
-    --secondary-background-color: #ccc;
+    --secondary-background-color: #e6e6e6;
     --image-background-color: #{$PRIMARY_COLOR};
-    --primary-text-color: #{$PRIMARY_BACKGROUND_COLOR};
+    --primary-text-color: #{$DARKER_GRAY_COLOR};
     --secondary-text-color: #525252;
-    --box-shadow: 0 4px 8px #343434;
+    --box-shadow: 0 4px 8px #{$DARK_GRAY_COLOR};
   }
 }
 
@@ -79,9 +78,9 @@ a {
 }
 
 button {
-  background-color: $SECONDARY_BACKGROUND_COLOR;
+  background-color: $DARK_GRAY_COLOR;
   border: none;
-  color: $PRIMARY_TEXT_COLOR;
+  color: $LIGHTER_GRAY_COLOR;
   cursor: pointer;
   font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
   line-height: 1.5;
