--- a/src/components/Achievements/styles.module.scss
+++ b/src/components/Achievements/styles.module.scss
@@ -23,6 +23,11 @@
       height: 300px;
     }
 
+    &--expanded {
+      @extend .achv__card;
+      box-shadow: var(--box-shadow);
+    }
+
     &__image {
       height: 100%;
       object-fit: cover;
@@ -31,7 +36,8 @@
 
     &__details {
       align-items: center;
-      background-color: $SECONDARY_BACKGROUND_COLOR;
+      background-color: var(--secondary-background-color);
+      color: var(--primary-text-color);
       display: flex;
       flex-direction: column;
       font-size: 16px;
