--- a/src/components/Nav/styles.module.scss
+++ b/src/components/Nav/styles.module.scss
@@ -20,7 +20,7 @@
 
 .nav {
   align-items: center;
-  background-color: $SECONDARY_BACKGROUND_COLOR;
+  background-color: $DARK_GRAY_COLOR;
   box-shadow: var(--box-shadow);
   display: flex;
   gap: 16px;
@@ -38,7 +38,7 @@
   }
 
   &__menu {
-    background-color: $SECONDARY_BACKGROUND_COLOR;
+    background-color: $DARK_GRAY_COLOR;
     height: 20px;
     width: 20px;
     @media (min-width: 1024px) {
@@ -80,7 +80,7 @@
 
   &__list {
     align-items: center;
-    background-color: $SECONDARY_BACKGROUND_COLOR;
+    background-color: $DARK_GRAY_COLOR;
     box-shadow: 0 4px 4px black;
     display: flex;
     flex-direction: column;
@@ -115,7 +115,7 @@
       }
 
       a {
-        color: $PRIMARY_TEXT_COLOR;
+        color: $LIGHTER_GRAY_COLOR;
         text-decoration: none;
       }
     }
