--- a/src/pages/Contact/styles.module.scss
+++ b/src/pages/Contact/styles.module.scss
@@ -11,7 +11,7 @@
   }
 
   &__picture {
-    background-color: $SECONDARY_BACKGROUND_COLOR;
+    background-color: $DARK_GRAY_COLOR;
     border-radius: 8px;
     box-shadow: -20px 20px $PRIMARY_COLOR;
     margin: 24px 0 24px 24px;
