--- a/src/pages/Development/styles.module.scss
+++ b/src/pages/Development/styles.module.scss
@@ -57,9 +57,9 @@
   }
 
   &::before {
-    background-color: $SECONDARY_TEXT_COLOR;
+    background-color: var(--secondary-text-color);
     border-radius: 8px;
-    border: 4px solid $PRIMARY_BACKGROUND_COLOR;
+    border: 4px solid var(--primary-background-color);
     content: "";
     height: 8px;
     left: -30px;
@@ -85,7 +85,7 @@
   }
 
   &__title {
-    color: $SECONDARY_TEXT_COLOR;
+    color: var(--secondary-text-color);
     cursor: pointer;
     font-size: 32px;
     order: 2;
@@ -100,6 +100,6 @@
   }
 
   &__description {
-    color: $SECONDARY_TEXT_COLOR;
+    color: var(--secondary-text-color);
   }
 }
