--- a/src/pages/Home/styles.module.scss
+++ b/src/pages/Home/styles.module.scss
@@ -39,7 +39,7 @@
       font-size: 20px;
       padding: 4px 16px;
       &:last-child {
-        color: $PRIMARY_TEXT_COLOR;
+        color: $LIGHTER_GRAY_COLOR;
         background-color: $PRIMARY_COLOR;
       }
     }
