--- a/src/pages/Development/styles.module.scss
+++ b/src/pages/Development/styles.module.scss
@@ -14,6 +14,12 @@
     margin: 0 48px;
   }
 
+  &__wrapper {
+    @media (min-width: 1024px) {
+      min-width: 300px;
+    }
+  }
+
   &__list {
     display: flex;
     flex-direction: column;
@@ -23,6 +29,9 @@
     text-align: start;
     @media (min-width: 1024px) {
       min-width: 300px;
+      position: fixed;
+      top: 0;
+      translate: 0 100%;
     }
 
     &::before {
