Fix nav small visual bugs

--- a/src/assets/styles/index.scss
+++ b/src/assets/styles/index.scss
@@ -35,7 +35,7 @@ body {
     --image-background-color: #{$PRIMARY_COLOR};
     --primary-text-color: #{$DARKER_GRAY_COLOR};
     --secondary-text-color: #525252;
-    --box-shadow: 0 4px 8px #{$DARK_GRAY_COLOR};
+    --box-shadow: 0 6px 8px -2px #525252;
   }
 }
 
