--- a/src/assets/styles/index.scss
+++ b/src/assets/styles/index.scss
@@ -1,9 +1,7 @@
-@import "variables";
-
 :root {
   font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
   line-height: 1.5;
-  font-weight: 400;
+  font-weight: 500;
 
   color-scheme: light dark;
 
@@ -18,23 +16,16 @@
 }
 
 body {
-  --primary-background-color: #{$DARKER_GRAY_COLOR};
-  --secondary-background-color: #{$DARK_GRAY_COLOR};
-  --image-background-color: #{$DARK_GRAY_COLOR};
-  --primary-text-color: #{$LIGHTER_GRAY_COLOR};
-  --secondary-text-color: #{$LIGHT_GRAY_COLOR};
-  --box-shadow: 0 6px 8px -2px black;
-
   background-color: var(--primary-background-color);
   color: var(--primary-text-color);
   margin: 0;
 
+  &.dark {
+    --image-background-color: var(--dark-accent-color);
+    --box-shadow: 0 6px 8px -2px black;
+  }
   &.light {
-    --primary-background-color: #d6d6d6;
-    --secondary-background-color: #e6e6e6;
-    --image-background-color: #{$PRIMARY_COLOR};
-    --primary-text-color: #{$DARKER_GRAY_COLOR};
-    --secondary-text-color: #525252;
+    --image-background-color: var(--brand-color);
     --box-shadow: 0 6px 8px -2px #525252;
   }
 }
@@ -56,7 +47,7 @@ main {
 }
 
 h1 {
-  color: $PRIMARY_COLOR;
+  color: var(--brand-color);
   font-size: 32px;
   font-weight: 700;
   @media (min-width: 1024px) {
@@ -73,14 +64,14 @@ p {
 a {
   color: var(--primary-text-color);
   &:hover {
-    color: $PRIMARY_COLOR;
+    color: var(--brand-accent-color);
   }
 }
 
 button {
-  background-color: $DARK_GRAY_COLOR;
+  background-color: var(--dark-accent-color);
   border: none;
-  color: $LIGHTER_GRAY_COLOR;
+  color: var(--light-shades-color);
   cursor: pointer;
   font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
   line-height: 1.5;
