--- a/src/components/Achievements/styles.module.scss
+++ b/src/components/Achievements/styles.module.scss
@@ -1,5 +1,3 @@
-@import "../../assets/styles/variables";
-
 .achv {
   display: flex;
   flex-direction: column;
@@ -48,7 +46,7 @@
       width: 100%;
 
       h3 {
-        color: $PRIMARY_COLOR;
+        color: var(--brand-color);
         font-size: 24px;
         margin-bottom: 16px;
         text-align: start;
