--- a/src/components/Nav/styles.module.scss
+++ b/src/components/Nav/styles.module.scss
@@ -1,7 +1,5 @@
-@import "../../assets/styles/variables";
-
 %menu-open {
-  background-color: $PRIMARY_COLOR;
+  background-color: var(--brand-color);
   content: "";
   height: 2px;
   left: 0;
@@ -10,7 +8,7 @@
 }
 
 %menu-close {
-  background-color: $PRIMARY_COLOR;
+  background-color: var(--brand-color);
   content: "";
   height: 100%;
   left: 50%;
@@ -20,7 +18,7 @@
 
 .nav {
   align-items: center;
-  background-color: $DARK_GRAY_COLOR;
+  background-color: var(--dark-accent-color);
   box-shadow: var(--box-shadow);
   display: flex;
   gap: 16px;
@@ -40,7 +38,7 @@
   }
 
   &__menu {
-    background-color: $DARK_GRAY_COLOR;
+    background-color: var(--dark-accent-color);
     height: 20px;
     width: 20px;
     @media (min-width: 1024px) {
@@ -52,7 +50,7 @@
     }
 
     &--open {
-      background-color: $PRIMARY_COLOR;
+      background-color: var(--brand-color);
       height: 2px;
       position: relative;
       &::before {
@@ -82,7 +80,7 @@
 
   &__list {
     align-items: center;
-    background-color: $DARK_GRAY_COLOR;
+    background-color: var(--dark-accent-color);
     box-shadow: var(--box-shadow);
     display: flex;
     flex-direction: column;
@@ -105,7 +103,7 @@
       &--current {
         @extend .nav__list__item;
         &:after {
-          background-color: $PRIMARY_COLOR;
+          background-color: var(--brand-color);
           border-radius: 8px;
           bottom: -8px;
           content: "";
@@ -117,7 +115,7 @@
       }
 
       a {
-        color: $LIGHTER_GRAY_COLOR;
+        color: var(--light-shades-color);
         text-decoration: none;
       }
     }
