--- a/src/components/Projects/styles.module.scss
+++ b/src/components/Projects/styles.module.scss
@@ -1,5 +1,3 @@
-@import "../../assets/styles/variables";
-
 .projects {
   text-align: start;
   width: 100%;
@@ -11,9 +9,9 @@
     }
     a {
       text-decoration: none;
-      color: $PRIMARY_COLOR;
+      color: var(--brand-color);
       &:hover {
-        color: rgba($PRIMARY_COLOR, 0.8);
+        color: var(--brand-accent-color);
       }
     }
   }
