--- a/src/pages/Contact/styles.module.scss
+++ b/src/pages/Contact/styles.module.scss
@@ -1,5 +1,3 @@
-@import "../../assets/styles/variables";
-
 .contact {
   align-items: center;
   display: flex;
@@ -11,9 +9,9 @@
   }
 
   &__picture {
-    background-color: $DARK_GRAY_COLOR;
+    background-color: var(--dark-accent-color);
     border-radius: 8px;
-    box-shadow: -20px 20px $PRIMARY_COLOR;
+    box-shadow: -20px 20px var(--brand-color);
     margin: 24px 0 24px 24px;
     max-width: 80%;
     @media (min-width: 1024px) {
