--- a/src/pages/Development/styles.module.scss
+++ b/src/pages/Development/styles.module.scss
@@ -1,5 +1,3 @@
-@import "../../assets/styles/variables";
-
 .developments {
   display: flex;
   flex-direction: column;
@@ -35,7 +33,7 @@
     }
 
     &::before {
-      background-color: $PRIMARY_COLOR;
+      background-color: var(--brand-color);
       border-radius: 8px;
       content: "";
       height: 100%;
@@ -91,7 +89,7 @@
     }
 
     .development__title {
-      color: $PRIMARY_COLOR;
+      color: var(--brand-color);
       font-size: 40px;
       @media (min-width: 1024px) {
         font-size: 48px;
@@ -117,7 +115,7 @@
     }
 
     &:hover {
-      color: $PRIMARY_COLOR;
+      color: var(--brand-accent-color);
     }
   }
 
