--- a/src/pages/Home/styles.module.scss
+++ b/src/pages/Home/styles.module.scss
@@ -1,5 +1,3 @@
-@import "../../assets/styles/variables";
-
 .home {
   @media (min-width: 1024px) {
     min-width: 500px;
@@ -9,14 +7,14 @@
     color: var(--primary-text-color);
     font-weight: 400;
     strong {
-      color: $PRIMARY_COLOR;
+      color: var(--brand-color);
     }
   }
 
   &__illustration {
     background-color: var(--image-background-color);
     border-radius: 8px;
-    border: 2px solid $PRIMARY_COLOR;
+    border: 2px solid var(--brand-color);
     max-width: 90%;
     @media (min-width: 1024px) {
       max-width: 500px;
@@ -35,12 +33,12 @@
 
     button {
       border-radius: 50px;
-      border: 1px solid $PRIMARY_COLOR;
+      border: 1px solid var(--brand-color);
       font-size: 20px;
       padding: 4px 16px;
       &:last-child {
-        color: $LIGHTER_GRAY_COLOR;
-        background-color: $PRIMARY_COLOR;
+        color: var(--light-shades-color);
+        background-color: var(--brand-color);
       }
     }
   }
