--- a/src/pages/Home/styles.module.scss
+++ b/src/pages/Home/styles.module.scss
@@ -8,6 +8,7 @@
     font-weight: 400;
     strong {
       color: var(--brand-color);
+      font-family: "Protest Riot", sans-serif;
     }
   }
 
@@ -29,17 +30,6 @@
     justify-content: center;
     @media (min-width: 1024px) {
       flex-direction: row;
-    }
-
-    button {
-      border-radius: 50px;
-      border: 1px solid var(--brand-color);
-      font-size: 20px;
-      padding: 4px 16px;
-      &:last-child {
-        color: var(--light-shades-color);
-        background-color: var(--brand-color);
-      }
     }
   }
 }
