Add menu button cursor pointer

--- a/src/components/Nav/styles.module.scss
+++ b/src/components/Nav/styles.module.scss
@@ -39,6 +39,7 @@
 
   &__menu {
     background-color: var(--dark-accent-color);
+    cursor: pointer;
     height: 20px;
     width: 20px;
     @media (min-width: 1024px) {
