--- a/src/pages/Contact/styles.module.scss
+++ b/src/pages/Contact/styles.module.scss
@@ -4,19 +4,21 @@
   flex-direction: column-reverse;
   gap: 48px;
   justify-content: center;
+  margin: 0 auto;
   @media (min-width: 1024px) {
     flex-direction: row;
   }
 
   &__picture {
+    aspect-ratio: 1;
     background-color: var(--dark-accent-color);
     border-radius: 8px;
     box-shadow: -20px 20px var(--brand-color);
     margin: 24px 0 24px 24px;
-    max-width: 80%;
+    max-width: 100%;
+    width: 335px;
     @media (min-width: 1024px) {
       margin: 0;
-      max-width: 30%;
     }
   }
 
