--- a/src/pages/Home/styles.module.scss
+++ b/src/pages/Home/styles.module.scss
@@ -23,13 +23,12 @@
   }
 
   &__illustration {
+    aspect-ratio: 1;
     background-color: var(--image-background-color);
     border-radius: 8px;
     border: 2px solid var(--brand-color);
-    max-width: 90%;
-    @media (min-width: 1024px) {
-      max-width: 500px;
-    }
+    max-width: 500px;
+    width: 100%;
   }
 
   &__buttons {
